Adding PWA features

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "smart-brain-facerecognition",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rajarahul12.github.io/smart-brain-facerecognition",
   "dependencies": {
     "clarifai": "^2.8.0",
+    "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-particles-js": "^2.2.0",
@@ -12,6 +14,8 @@
     "tachyons": "^4.10.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
