--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "homepage": "https://rajarahul12.github.io/smart-brain-facerecognition",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "clarifai": "^2.8.0",
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-particles-js": "^2.2.0",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.5",
     "react-tilt": "^0.1.4",
+    "reactstrap": "^6.4.0",
     "tachyons": "^4.10.0"
   },
   "scripts": {
